--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="form-body">
             <form action="">
                 <div class="form-item">
-                    <label for="fullName">Full Name:</label>
-                    <input type="text" id="firstName" name="firstName" placeholder="Surname FirstName" required>
+                    <!-- <label for="fullName">Full Name:</label> -->
+                    <input type="text" id="firstName" name="firstName" placeholder="Full Name" required>
                 </div>
 
                 <!-- <div class="form-item">
@@ -28,24 +28,24 @@
                 </div> -->
 
                 <div class="form-item">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <!-- <label for="email">Email:</label> -->
+                    <input type="email" id="email" name="email" placeholder="email@email.com" required>
                 </div>
 
                 <div class="form-item">
-                    <label for="phone">Phone Number:</label>
-                    <input type="text" id="phone" name="phone" required>
+                    <!-- <label for="phone">Phone Number:</label> -->
+                    <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
                 </div>
 
                 <div class="form-item">
-                    <label for="Matric:">Matric/Reg Number:</label>
-                    <input type="text" id="Matric:" name="Matric:" required>
+                    <!-- <label for="Matric:">Matric/Reg Number:</label> -->
+                    <input type="text" id="Matric:" name="Matric:" placeholder="Matric Number"required>
                 </div>
                 
                 <div class="form-item">
-                    <label for="yrOfStudy">Current Year of Study:</label>
+                    <!-- <label for="yrOfStudy">Current Year of Study:</label> -->
                     <select name="yrOfStudy" id="yrOfStudy" required>
-                        <option value="Null"></option>
+                        <option value="Null">Year of Study</option>
                         <option value="1">100L</option>
                         <option value="2">200L</option>
                         <option value="3">300L</option>
@@ -55,9 +55,9 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="department">Department:</label>
+                    <!-- <label for="department">Department:</label> -->
                     <select name="department" id="department" required>
-                        <option value="Null"></option>
+                        <option value="Null">Department</option>
                         <option value="Chemistry">Chemistry</option>
                         <option value="ComputerScience">Computer Science</option>
                         <option value="Physics">Physics</option>
@@ -74,9 +74,9 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="faculty">Faculty:</label>
+                    <!-- <label for="faculty">Faculty:</label> -->
                     <select name="faculty" id="faculty" required>
-                        <option value="Null"></option>
+                        <option value="Null">Faculty</option>
                         <option value="physicalSciences">Physical Sciences</option>
                         <option value="biologicalSciences">Biological Sciences</option>
                         <option value="medicine">Medicine</option>
@@ -84,17 +84,17 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="address">Address:</label>
-                    <input type="text" id="address" name="address" required>
+                    <!-- <label for="address">Address:</label> -->
+                    <input type="text" id="address" name="address" placeholder="Address" required>
                 </div>
 
                 <div class="form-item">
-                    <label for="dob">Date of birth:</label>
-                    <input type="date" id="dob" name="dob" required>
+                    <!-- <label for="dob">Date of birth:</label> -->
+                    <input type="date" id="dob" name="dob" placeholder="Date of Birth"required>
                 </div>
 
                 <!-- <div class="form-item">
-                    <label for="maritalStatus">Marital Status:</label>
+                     <label for="maritalStatus">Marital Status:</label>
                     <select name="maritalStatus" id="maritalStatus" required>
                         <option value="Single">Single</option>
                         <option value="Married">Married</option>
@@ -103,8 +103,9 @@
                 </div> -->
 
                 <div class="form-item">
-                    <label for="sex">Sex:</label>
+                    <!-- <label for="sex">Sex:</label> -->
                     <select name="sex" id="sex" required>
+                        <option value="Male">Sex</option>
                         <option value="Male">Male</option>
                         <option value="Female">Female</option>
                         <option value="ratherNotSay">Rather not say</option>
