--- a/form.html
+++ b/form.html
@@ -3,51 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-        <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
         <title> Web Form </title>
 
     </head>
     <body>
-        <div class="form-body">
-            <h3>Create Account</h3>
-            <form action="">
+        <div class="container">
+            <h2>Create Account</h2>
+            <form id="registrationForm" class="form">
                 <div class="form-item">
-                    <label for="fullName">Full Name:</label>
-                    <input type="text" id="firstName" name="firstName" required>
+                    <label for="username">Username</label>
+                    <input type="text" id="username" placeholder="Enter Username">
+                    <small>Error Message</small>
                 </div>
 
                 <div class="form-item">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="email">Email</label>
+                    <input type="text" id="email" placeholder="Enter email">
+                    <small>Error Message</small>
                 </div>
 
                 <div class="form-item">
-                    <label for="phone">Phone Number:</label>
-                    <input type="text" id="phone" name="phone" required>
+                    <label for="phone">Phone</label>
+                    <input type="text" id="phone" placeholder="Enter phone number">
+                    <small>Error Message</small>
                 </div>
 
                 <div class="form-item">
-                    <label for="Matric:">Matric/Reg Number:</label>
-                    <input type="text" id="Matric:" name="Matric:" required>
-                </div>
-                
-                <div class="form-item">
-                    <label for="yrOfStudy">Current Year of Study:</label>
-                    <select name="yrOfStudy" id="yrOfStudy" required>
-                        <option value="Null"></option>
-                        <option value="1">100L</option>
-                        <option value="2">200L</option>
-                        <option value="3">300L</option>
-                        <option value="4">400L</option>
-                        <option value="5">500L</option>
-                    </select>   
+                    <label for="matricNum">Matric No.</label>
+                    <input type="text" id="matricNum" placeholder="">
+                    <small>Error Message</small>
                 </div>
 
                 <div class="form-item">
-                    <label for="department">Department:</label>
-                    <select name="department" id="department" required>
+                    <label for="department">Department</label>
+                    <select name="department" id="department">
                         <option value="Null"></option>
                         <option value="Chemistry">Chemistry</option>
                         <option value="ComputerScience">Computer Science</option>
@@ -65,8 +57,8 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="faculty">Faculty:</label>
-                    <select name="faculty" id="faculty" required>
+                    <label for="faculty">Faculty</label>
+                    <select name="faculty" id="faculty">
                         <option value="Null"></option>
                         <option value="physicalSciences">Physical Sciences</option>
                         <option value="biologicalSciences">Biological Sciences</option>
@@ -75,13 +67,13 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="dob">Date of birth:</label>
-                    <input type="date" id="dob" name="dob" required>
+                    <label for="dob">Date of birth</label>
+                    <input type="date" id="dob">
                 </div>
 
                 <div class="form-item">
-                    <label for="sex">Sex:</label>
-                    <select name="sex" id="sex" required>
+                    <label for="sex">Sex</label>
+                    <select name="sex" id="sex">
                         <option value="Null"></option>
                         <option value="Male">Male</option>
                         <option value="Female">Female</option>
@@ -90,13 +82,23 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter password">
+                    <small>Error Message</small>
                 </div>
 
-                <input class="submit" type="submit" value="Submit">
-                
+                <div class="form-item">
+                    <label for="passworConf">Confirm Password</label>
+                    <input type="password" id="passwordConf" placeholder="Enter password">
+                    <small>Error Message</small>
+                </div>
+
+                <div class="btn">
+                    <button class="submit">Submit</button>
+                    <button class="back">Back</button>
+                </div>
             </form>
         </div>
+        <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
